Add 'More Stories' heading

--- a/index.html
+++ b/index.html
@@ -188,11 +188,11 @@
               <ul class="related">
                 <li><h6 class="related-story"><a href="#">Who Blew Up the Summit with Kim Jong Un? (Hint: Bolton)</a></h6>
               </ul>
-            </article>            
+            </article>
           </section>
 
-          <section class="more-top section float-left col-md-7 col-sm-12 col-xs-12">
-            <h2 class="section-heading sr-only">More Top Stories</h2>
+          <section class="more-stories section float-left col-md-7 col-sm-12 col-xs-12">
+            <h2 class="section-heading">More Stories</h2>
             <div class="divider"></div>
             <article class="story media">
               <a href="#" class="picture-wrapper-md media-left mr-2">
